--- a/src/assets/styles/components/news/card.scss
+++ b/src/assets/styles/components/news/card.scss
@@ -38,7 +38,7 @@
         margin-bottom: 20px;
       }
       @media (max-height: 680px) and (min-width: 1200px) {
-        font-size: 1.1rem;
+        font-size: 0.9rem;
       }
     }
     span {
@@ -50,6 +50,9 @@
       font-family: 'Suisse Light';
       @include is-mobile {
         position: relative;
+      }
+      @media (max-height: 680px) and (min-width: 1200px) {
+        font-size: 0.8rem;
       }
     }
   }
