--- a/src/assets/styles/components/news/cards.scss
+++ b/src/assets/styles/components/news/cards.scss
@@ -22,7 +22,7 @@
     border-radius: 20px !important;
   }
   @media (max-height: 680px) and (min-width: 1200px) {
-    height: 90vh;
+    height: 79vh;
   }
 }
 
