--- a/src/assets/styles/components/splash-screen.scss
+++ b/src/assets/styles/components/splash-screen.scss
@@ -72,26 +72,20 @@
     display: inline-block;
     width: 30%;
     max-width: 400px !important;
-    height: 400px;
-    // background-repeat: no-repeat;
-    // background-position: center;
-    // background-size: cover;
+    height: 400px !important;
     @include is-mobile {
       width: 90%;
       height: 45vh;
       margin-top: 25px;
     }
     @media (max-height: 680px) and (min-width: 1200px) {
-      width: 30%;
-      max-width: 250px;
-      height: 250px;
+      width: 30% !important;
+      max-width: 250px !important;
+      height: 250px !important;
     }
     img {
       height: 400px !important;
-      // max-width: 100% !important;
       width: 100% !important;
-      // max-width: max-content !important;
-      // height: 100% !important;
       margin: 0 0 25px 0 !important;
     }
   }
