--- a/src/assets/styles/containers/contact.scss
+++ b/src/assets/styles/containers/contact.scss
@@ -6,6 +6,9 @@
   padding-top: $header-height;
   height: 90%;
   width: 100%;
+  @media (max-height: 680px) and (min-width: 1200px) {
+    height: 85%;
+  }
   @include is-mobile {
     padding-top: $header-height-mobile;
     height: max-content;
@@ -26,6 +29,9 @@
     @include is-mobile {
       margin-top: 20px;
       display: block;
+    }
+    @media (max-height: 680px) and (min-width: 1200px) {
+      margin-top: 20px;
     }
     img {
       width: 50%;
